--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "description": "",
   "dependencies": {
     "electron": "^34.0.2",
+    "express": "^4.21.2",
+    "node-fetch": "^3.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.26.7",
