--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "description": "",
   "dependencies": {
     "electron": "^34.0.2",
+    "epub": "^1.3.0",
     "express": "^4.21.2",
     "node-fetch": "^3.3.2",
+    "pdfjs-dist": "^4.10.38",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sqlite3": "^5.1.7"
