--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "crypto": "^1.0.1",
     "electron": "^34.0.2",
     "epub": "^1.3.0",
     "express": "^4.21.2",
